[project]
name = "ctfhelper"
version = "0.1.0"
description = "Lightweight CLI toolkit for CTFs (crypto, stego, forensics)"
authors = [
  { name = "PAIN-hub" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Pillow>=9.0.0",
  "python-magic>=0.4.27",
  "filetype>=1.2.0"
]

[project.scripts]
ctfhelper = "ctfhelper:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"